--- a/Styles/index.css
+++ b/Styles/index.css
@@ -748,6 +748,107 @@ p{
 }
 
 
+.orderArticles{
+    position: absolute;
+    right: 20%;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.orderArticles span{
+    font-size: 22px;
+    cursor: pointer;
+    color: var(--texto-del-boton);
+}
+
+.orderBars i{
+    color: var(--segundario);
+}
+
+.orderArticles .orderBars:hover i{
+    color: var(--segundario);
+}
+
+.orderArticles .orderLine:hover i{
+    color: var(--texto-del-boton);
+}
+
+.sectionOrder{
+    width: 16%;
+    height: 100%;
+    display: flex;
+    padding: 1%;
+}
+
+.contentOrder{
+    width: 100%;
+    height: 100%;
+    padding: 4% 5%;
+    background-color: #222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px #222,0px 0px 2px #222,0px 0px 2px #222;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.contentOrder h4, span{
+    font-size: 15px;
+    color: var(--texto-del-boton);
+}
+
+.contentOrder:hover i, .contentOrder:hover h4{
+    color: var(--texto-del-boton);
+}
+
+.selectOrder{
+    position: absolute;
+    right:4.8%;
+    top: 100%;
+    width:fit-content;
+    height: fit-content;
+    background-color: #222;
+    z-index: 4;
+    padding: 1%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.selectOrder h3{
+    font-size: 15px;
+}
+
+.listOrder{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+}
+
+.listOrder li{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.listOrder li h3{
+    font-size: 15px;
+}
+
+.listOrder li:hover h3{
+    color: var(--segundario);
+}
 
 
 /*Content*/
