--- a/Styles/index.css
+++ b/Styles/index.css
@@ -250,7 +250,7 @@ p{
     border-right: .5px solid var(--parrafo);
     display: flex;
     flex-direction: column;
-    margin: 0 2% 0 0;
+    margin: 0 0% 0 0;
 }
 
 
@@ -733,6 +733,8 @@ p{
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0 1%;
+    margin: .5% 0;
 }
 
 .titleArticles{
@@ -743,8 +745,8 @@ p{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 4%;
-    margin: .5% 0;
+    padding: .5% 4%;
+    background-color: #3335;
 }
 
 
@@ -760,7 +762,7 @@ p{
 }
 
 .orderArticles span{
-    font-size: 22px;
+    font-size: clamp(12px, 1.6vw, 38px);
     cursor: pointer;
     color: var(--texto-del-boton);
 }
@@ -788,7 +790,6 @@ p{
     width: 100%;
     height: 100%;
     padding: 4% 5%;
-    background-color: #222;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -796,10 +797,11 @@ p{
     box-shadow: 0px 0px 2px #222,0px 0px 2px #222,0px 0px 2px #222;
     gap: 10px;
     cursor: pointer;
+    border: .5px solid var(--segundario);
 }
 
 .contentOrder h4, span{
-    font-size: 15px;
+    font-size: clamp(7px, 1vw, 35px);
     color: var(--texto-del-boton);
 }
 
