--- a/Styles/index.css
+++ b/Styles/index.css
@@ -32,7 +32,11 @@ p{
 
 .containerAll{
     width: 100%;
-    height: 100vh;    
+    max-width: 1500px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
 }
 
 .nav{
@@ -164,7 +168,7 @@ p{
 
 
 .navInferior{
-    margin: 2% 0 0 0;
+    margin: 3% 0 0 0;
     width: 100%;
     height: fit-content;
     display: flex;
@@ -205,7 +209,7 @@ p{
 }
 
 .containerText ul li label{
-    font-size: clamp(13px, 1.2vw, 36px);
+    font-size: clamp(13px, 1.2vw, 28px);
     display: flex;
     cursor: pointer;
 }
@@ -254,7 +258,7 @@ p{
 
 
 .content h3{
-    font-size: clamp(13px, 1.6vw, 50px);
+    font-size: clamp(13px, 1.5vw, 35px);
     color: var(--titular);
 }
 
@@ -269,7 +273,7 @@ p{
 }
 
 .delFilters, .addFilters{
-    font-size: clamp(13px, 1.3vw, 50px);
+    font-size: clamp(13px, 1.2vw, 35px);
     cursor: pointer;
     padding: 5% 2.2%;
     border-radius: 2px;
@@ -302,7 +306,7 @@ p{
 }
 
 .contentPrice .titlePrice{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 0 0 1.5% 5%;
 }
@@ -324,7 +328,7 @@ p{
 
     & label{
         margin: 1% 0 0 0;
-        font-size: clamp(12px, 1.4vw, 35px);
+        font-size: clamp(12px, 1.3vw, 25px);
     }
 
     & input{
@@ -333,7 +337,7 @@ p{
         border: 1px solid var(--segundario);
         outline: none;
         padding: 1% 3%;
-        font-size: clamp(10px, 1.1vw, 30px);
+        font-size: clamp(10px, 1.1vw, 25px);
     }
 }
 
@@ -349,7 +353,7 @@ p{
 }
 
 .contentBrand .titleBrand{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 3% 0 1.5% 5%;
 }
@@ -385,8 +389,8 @@ p{
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--segundario);
-    width: clamp(10px, 2.8vh, 100px);
-    height: clamp(10px, 2.8vh, 100px);
+    width: clamp(1px, 2.6vh, 30px);
+    height: clamp(1px, 2.55vh, 30px);
     outline: none;
     cursor: pointer;
     border-radius: 1px;
@@ -397,7 +401,7 @@ p{
 }
 
 .listBrand li label{
-    font-size: clamp(10px, 1.1vw, 30px);
+    font-size: clamp(10px, 1.1vw, 24px);
     font-weight: bolder;
 }
 
@@ -413,7 +417,7 @@ p{
 }
 
 .contentShipping .titleShipping{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 3% 0 1.5% 5%;
 }
@@ -443,8 +447,8 @@ p{
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--segundario);
-    width: clamp(10px, 2.8vh, 100px);
-    height: clamp(10px, 2.8vh, 100px);
+    width: clamp(1px, 2.6vh, 30px);
+    height: clamp(1px, 2.55vh, 30px);
     outline: none;
     cursor: pointer;
     border-radius: 1px;
@@ -455,7 +459,7 @@ p{
 }
 
 .listShipping li label{
-    font-size: clamp(10px, 1.1vw, 30px);
+    font-size: clamp(10px, 1.1vw, 24px);
     font-weight: bolder;
 
     & .numberShipping{
@@ -477,7 +481,7 @@ p{
 }
 
 .contentState .titleState{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 3% 0 1.5% 5%;
 }
@@ -507,8 +511,8 @@ p{
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--segundario);
-    width: clamp(10px, 2.8vh, 100px);
-    height: clamp(10px, 2.8vh, 100px);
+    width: clamp(1px, 2.6vh, 30px);
+    height: clamp(1px, 2.55vh, 30px);
     outline: none;
     cursor: pointer;
     border-radius: 1px;
@@ -519,7 +523,7 @@ p{
 }
 
 .listState li label{
-    font-size: clamp(10px, 1.1vw, 30px);
+    font-size: clamp(10px, 1.1vw, 24px);
     font-weight: bolder;
 
     & .numberState{
@@ -542,7 +546,7 @@ p{
 }
 
 .contentStorage .titleStorage{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 3% 0 1.5% 5%;
 }
@@ -572,8 +576,8 @@ p{
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--segundario);
-    width: clamp(10px, 2.8vh, 100px);
-    height: clamp(10px, 2.8vh, 100px);
+    width: clamp(1px, 2.6vh, 30px);
+    height: clamp(1px, 2.55vh, 30px);
     outline: none;
     cursor: pointer;
     border-radius: 1px;
@@ -584,7 +588,7 @@ p{
 }
 
 .listStorage li label{
-    font-size: clamp(10px, 1.1vw, 30px);
+    font-size: clamp(10px, 1.1vw, 24px);
     font-weight: bolder;
 
     & .numberStorage{
@@ -606,7 +610,7 @@ p{
 }
 
 .contentSizeScreen .titleSizeScreen{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 3% 0 1.5% 5%;
 }
@@ -636,8 +640,8 @@ p{
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--segundario);
-    width: clamp(10px, 2.8vh, 100px);
-    height: clamp(10px, 2.8vh, 100px);
+    width: clamp(1px, 2.6vh, 30px);
+    height: clamp(1px, 2.55vh, 30px);
     outline: none;
     cursor: pointer;
     border-radius: 1px;
@@ -648,7 +652,7 @@ p{
 }
 
 .listSizeScreen li label{
-    font-size: clamp(10px, 1.1vw, 30px);
+    font-size: clamp(10px, 1.1vw, 24px);
     font-weight: bolder;
 
     & .numberSizeScreen{
@@ -670,7 +674,7 @@ p{
 }
 
 .contentRAM .titleRAM{
-    font-size: clamp(12px, 1.4vw, 35px);
+    font-size: clamp(12px, 1.3vw, 25px);
     font-weight: bolder;
     margin: 3% 0 1.5% 5%;
 }
@@ -700,8 +704,8 @@ p{
     appearance: none;
     background-color: transparent;
     border: 1px solid var(--segundario);
-    width: clamp(10px, 2.8vh, 100px);
-    height: clamp(10px, 2.8vh, 100px);
+    width: clamp(1px, 2.6vh, 30px);
+    height: clamp(1px, 2.55vh, 30px);
     outline: none;
     cursor: pointer;
     border-radius: 1px;
@@ -712,7 +716,7 @@ p{
 }
 
 .listRAM li label{
-    font-size: clamp(10px, 1.1vw, 30px);
+    font-size: clamp(10px, 1.1vw, 24px);
     font-weight: bolder;
 
     & .numberRAM{
@@ -765,7 +769,7 @@ p{
 }
 
 .orderArticles span{
-    font-size: clamp(12px, 1.6vw, 38px);
+    font-size: clamp(12px, 1.4vw, 32px);
     cursor: pointer;
     color: var(--texto-del-boton);
 }
@@ -787,7 +791,7 @@ p{
 }
 
 .sectionOrder{
-    width: 18%;
+    width: 20%;
     height: 100%;
     display: flex;
     padding: 1%;
@@ -808,7 +812,7 @@ p{
 }
 
 .contentOrder h4, span{
-    font-size: clamp(8.5px, 1vw, 35px);
+    font-size: clamp(8.5px, 1vw, 25px);
     color: var(--texto-del-boton);
 }
 
@@ -852,7 +856,7 @@ p{
 }
 
 .listOrder li h3{
-    font-size: clamp(9px, 1vw, 35px);
+    font-size: clamp(9px, 1vw, 25px);
 }
 
 .listOrder li:hover h3{
@@ -861,7 +865,7 @@ p{
 
 .contentArticlesLine{
     position: relative;
-    top: 5%;
+    top: 0%;
     width: 100%;
     height: fit-content;
     display: flex;
@@ -921,12 +925,12 @@ p{
 }
 
 .charactersArticle h3{
-    font-size: clamp(13px, 1.4vw, 45px);
+    font-size: clamp(13px, 1.4vw, 27px);
     
 }
 
 .charactersArticle p{
-    font-size: clamp(11px, 1.3vw, 45px);
+    font-size: clamp(11px, 1.3vw, 27px);
 }
 
 .charactersArticle h3:last-child{
@@ -990,6 +994,90 @@ p{
     align-items: center;
     justify-content: center;
 }
+
+.contentArticlesBars{
+    position: relative;
+    top: 5%;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    padding: 1%;
+}
+
+.listArticleBars{
+    width: 100%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(208px, 1fr));
+    grid-auto-rows: auto;
+    gap: 20px;
+}
+
+.itemArticleBars{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5%;
+    background-color: #222;
+    cursor: pointer;
+    border-radius: 1.5px;
+    box-shadow: 0px 0px 2.5px #222,0px 0px 2.5px #222,0px 0px 2.5px #222,0px 0px 2.5px #222;
+    transition: transform .2s ease-in-out;
+}
+
+.itemArticleBars:hover{
+    transform: scale(1.03);
+}
+
+.contentTopBars{
+    width: clamp(150px, 20vw, 200px);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    margin: 1%;
+}
+
+.contentTopBars img{
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+}
+
+.charactersArticleBars{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0 2%;
+}
+
+.charactersArticleBars h3{
+    font-size: clamp(13px, 1.1vw, 18px);
+    
+}
+
+.charactersArticleBars p{
+    font-size: clamp(11px, 1vw, 18px);
+}
+
+.charactersArticleBars h3:last-child{
+    color: var(--segundario);
+}
+
+.topElement{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    gap: 20px;
+}
+
+
 
 
 /*Content*/
