--- a/Styles/queries.css
+++ b/Styles/queries.css
@@ -14,6 +14,15 @@
     display: none;
 }
 
+/* .contentArticlesLine{
+    display: none;
+} */
+
+.contentArticlesBars{
+    display: none;
+}
+
+
 /*MEDIA QUERIES*/
 @media (max-width:720px) {
     /* .content{
